--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <link href="/src/app.css" rel="stylesheet">
 
-    <title>Solid App</title>
+    <title>Optiwallet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
